# datamine

./: .gitattributes  .gitignore  README.md
generated-docs/: README.md  mkdocs.yml
provided-materials/: Benchmarking Documentation.docx.md  (+2 more)
reference-code/master/: README.md  pyproject.toml
reference-code/master/docs/: mkdocs.yml
reference-code/master/docs/docs/: index.md
reference-code/master/uctbenchmark/: __init__.py  dataset.py  main.py  plots.py
reference-code/master/uctbenchmark/modeling/: train.py
reference-code/master/uctbenchmark/src/libraries/: apiIntegration.py  basicScoringFunction.py  binaryMetrics.py  dataManipulation.py  generateCov.py  unitConversion.py
reference-code/uct-benchmark-refactor-joncline/: INSTALLATION.md  Makefile  README.md  env  pyproject.toml
reference-code/uct-benchmark-refactor-joncline/docs/: mkdocs.yml
reference-code/uct-benchmark-refactor-joncline/docs/docs/: index.md
reference-code/uct-benchmark-refactor-joncline/notebooks/: quick-start.qmd
reference-code/uct-benchmark-refactor-joncline/src/: Create_Dataset.py  Evaluation.py  MainMVP.py  batchPull.py  generationDriver.py
reference-code/uct-benchmark-refactor-joncline/src/data/: Gausstest.csv  associated_orbits.csv  data_sorted.csv  dataset.csv  dataset_parameters.csv  dummy_database.csv  raw_results.json  ref_obs.csv  ref_orbits.csv  referenceSVs_.csv  referenceTLEs_.csv  sensorCounts.csv  simulated_observations.csv  uctp_output.json
reference-code/uct-benchmark-refactor-joncline/src/libraries/: TLEGeneration.py  apiIntegration.py  basicScoringFunction.py  dataManipulation.py  dummyUCTP.py  evaluationReport.py  generateCov.py  generatePDF.py  orbitAssociation.py  propagator.py  readData.py  simulateObservations.py  stateMetrics.py  timerClass.py  unitConversion.py  windowCheck.py  windowTools.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/: Create_Dataset.py  Evaluation.py  MainMVP.py  __init__.py  batchPull.py  config.py  dataset.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/api/: __init__.py  apiIntegration.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/data/: __init__.py  basicScoringFunction.py  dataManipulation.py  readData.py  windowCheck.py  windowTools.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/evaluation/: binaryMetrics.py  orbitAssociation.py  residualMetrics.py  stateMetrics.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/simulation/: TLEGeneration.py  gauss.py  propagator.py  simulateObservations.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/uctp/: dummyUCTP.py
reference-code/uct-benchmark-refactor-joncline/uct_benchmark/utils/: generateCov.py  generatePDF.py  scrape_satellite_data.py  unitConversion.py
(+175 files in other folders)
